--- a/forms/home.html
+++ b/forms/home.html
@@ -26,9 +26,9 @@
                 <li class="acolhedores"><strong>Acolhedores:</strong>  Acolher os alunos novos, resolver conflitos de salas, ajudar os professores a fazer atividades dinâmicas, ajudar na organização de eventos….  
                 </li>
                 <br>
-                <li class="producao"><strong> Produção:</strong> Responsável por organizar os eventos da escola, cuidado da parte de som, notebook e projetores</li>
+                <li class="producao"><strong> Produção:</strong> Responsável por organizar os eventos da escola, cuidado da parte de som, notebook e projetores.</li>
                 <br>
-                <li class="tecnologia"><strong>Tecnologia:</strong>  Responsável por edições de vídeos, criação de forms e sites para eventos</li>
+                <li class="tecnologia"><strong>Tecnologia:</strong>  Responsável por edições de vídeos, criação de forms e sites para eventos.</li>
             </ul>
         </article>
         
